RESOLVED FIXED26919
Root compositing layer is not correctly updated
https://bugs.webkit.org/show_bug.cgi?id=26919
Summary Root compositing layer is not correctly updated
Simon Fraser (smfr)
Reported 2009-07-01 23:23:23 PDT
7/1/09 5:26 PM Simon Fraser: On the page <http://camendesign.com/code/video_for_everybody>, which just got daring fireballed today, often the video element doesn't show. If you turn off hardware acceleration mode, it works. 7/1/09 6:07 PM Simon Fraser: Another symptom is that even when the video shows, resizing the window doesn't lay it out in the correct location. <rdar://problem/7026010>
Attachments
Patch (7.18 KB, patch)
2009-07-01 23:24 PDT, Simon Fraser (smfr)
mitz: review+
Simon Fraser (smfr)
Comment 1 2009-07-01 23:24:34 PDT
Simon Fraser (smfr)
Comment 2 2009-07-01 23:30:35 PDT
Note You need to log in before you can comment on or make changes to this bug.