2009-07-01  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        <video> fails to show on http://camendesign.com/code/video_for_everybody
        <rdar://problem/7026010>
        https://bugs.webkit.org/show_bug.cgi?id=26919

        Fix an issue introduced in r44961. In that revision we changed to only update
        compositing layer geometry when all siblings had been laid out (i.e. we pushed
        the updates one level down). However, that left out the root layer, so this
        fix ensures that the root layer geometry gets updated at the end.

        Test: compositing/geometry/root-layer-update.html

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::updateAfterLayout):

Canonical link: https://commits.webkit.org/37130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45468 268f45cc-cd09-0410-ab3c-d52691b4dbfc